# agent_competence

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
.codex/skills/agentic-design/: SKILL.md
.codex/skills/fastapi-backend/: SKILL.md
.codex/skills/git-workflow/: SKILL.md
.codex/skills/project-management/: SKILL.md
.codex/skills/python-quality/: SKILL.md
.github/workflows/: ci.yml
app/: __init__.py  analyze_cli.py  cli.py  competencies.py  competency_analysis.py  jobs.py  main.py  settings.py  sql_client.py  storage.py
app/agents/: __init__.py  service.py
app/core/: config.py
config/: job_search_request.json
docs/: AGENTIC_COMPETENCY_MODEL.md  JOB_COLLECTION.md  PROJECT.md  SKILLS.md  SUIVI_PROJET.md
migrations/: 001_competency_market_schema.sql
scripts/: analyze-competencies.cmd  analyze-competencies.ps1  query-db.cmd  query-db.ps1  search-jobs.cmd  search-jobs.ps1
tests/: conftest.py  test_agent_service.py  test_cli.py  test_competencies.py  test_competency_analysis.py  test_health.py  test_jobs.py
