[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-competence-backend"
version = "0.1.0"
description = "FastAPI backend for the Agent Competence project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
search-jobs = "app.cli:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".pytest_tmp",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing"
testpaths = ["tests"]
